--- a/components_backbone_modelref.html
+++ b/components_backbone_modelref.html
@@ -62,9 +62,9 @@
     <div class="container">
       <header class="page">
       </header>
-      <content class="page"><h1>Compatible Components: Backbone-ModelRef.js</h1>
+      <content class="page"><h1 id="compatible-components-backbone-modelref-js">Compatible Components: Backbone-ModelRef.js</h1>
 <p>Backbone-ModelRef.js provides a mechanism to respond to lazy-loaded Backbone.js models.</p>
-<h1>An Example:</h1>
+<h1 id="an-example-">An Example:</h1>
 <pre><code>window.ThingCellViewModel = kb.ViewModel.extend({
   constructor: function(model, options) {
     var _this = this;
@@ -86,8 +86,8 @@
     !model || model.bindLoadingStates(this._onModelLoaded);
     return this;
   }
-});</code></pre>
-<p>Please take a look at <a href="app_knockback_reference.html">Knockback.js Reference App</a> for a real-life example.</p>
+});
+</code></pre><p>Please take a look at <a href="app_knockback_reference.html">Knockback.js Reference App</a> for a real-life example.</p>
 
       </content>
       <footer class="page">
