--- a/components_backbone_relational.html
+++ b/components_backbone_relational.html
@@ -62,7 +62,7 @@
     <div class="container">
       <header class="page">
       </header>
-      <content class="page"><h1>Compatible Components: Backbone-Relational.js</h1>
+      <content class="page"><h1 id="compatible-components-backbone-relational-js">Compatible Components: Backbone-Relational.js</h1>
 <p><a href="https://github.com/PaulUithol/Backbone-relational/">Backbone-Relational.js</a> is an extension to Backbone.js that provides a solution to manage dependencies between Models. Knockback.js has been developed with support for relationships in mind.</p>
 <p>You should take a look at the <a href="tutorial_relational_models.html">Relational-Model Tutorial</a> and also the <a href="http://kmalakoff.github.com/knockback-reference-app">Knockback.js Reference App</a> for examples of using relationships in your apps including:</p>
 <ul>
