--- a/components_knockback_inspector.html
+++ b/components_knockback_inspector.html
@@ -62,7 +62,7 @@
     <div class="container">
       <header class="page">
       </header>
-      <content class="page"><h1>Compatible Components: Knockback-Inspector.js</h1>
+      <content class="page"><h1 id="compatible-components-knockback-inspector-js">Compatible Components: Knockback-Inspector.js</h1>
 <p>Knockback-Inspector.js provides a way to embed a View in your application (typically for debugging) where you can visualize and edit a tree view of your RESTful data!</p>
 
         <h3>Try out the Knockback-Inspector:</h3>
