--- a/getting_started_knockback_basics.html
+++ b/getting_started_knockback_basics.html
@@ -17,7 +17,7 @@
     <script type="application/javascript" src="vendor/globalize/globalize.js"></script>
     <script type="application/javascript" src="vendor/globalize/globalize.culture.en-GB.js"></script>
     <script type="application/javascript" src="vendor/globalize/globalize.culture.fr-FR.js"></script>
-    <script type="application/javascript" src="vendor/js/knockback-full-stack-0.18.4.js"></script>
+    <script type="application/javascript" src="vendor/js/knockback-full-stack-0.18.5.js"></script>
     <script type="application/javascript" src="./vendor/bootstrap/js/bootstrap.min.js"></script>
     <script type="application/javascript" src="./vendor/google-code-prettify/prettify.js"></script>
     <script type="application/javascript" src="./js/stylecode.js"></script>
@@ -86,7 +86,7 @@
           <p>You can use Knockback to bind Backbone Models/Collections to your HTML/templates (View) using Knockout. This allows server or application changes to Models/Collections to be propagated automatically to your views using `Backbone.sync`</p>
           <h2>Using with a Backbone.Model</h2>
           <h3>Creating a ko.observable() for each model attribute by hand:</h3>
-          <p><span>You can create a ViewModel with Knockout observables for each Backbone.Model attribute using</span><a href="doc/classes/kb/Observable.html">kb.observable</a><span> for simple attributes (as below) or</span><a href="doc/classes/kb/ViewModel.html">kb.ViewModel</a><span> for Backbone.Model attributes or</span><a href="doc/classes/kb/CollectionObservable.html">kb.CollectionObservable</a><span></span></p>
+          <p><span>You can create a ViewModel with Knockout observables for each Backbone.Model attribute using</span><a href="doc/classes/kb/Observable.html">kb.observable</a><span> for simple attributes (as below) or</span><a href="doc/classes/kb/ViewModel.html">kb.ViewModel</a><span> for Backbone.Model attributes or</span><a href="doc/classes/kb/CollectionObservable.html">kb.CollectionObservable</a><span>.</span></p>
           <p>Creating a ViewModel by hand is the best way to create optimized ViewModels.</p>
           <div class="row-fluid">
             <div class="span8">
