--- a/getting_started_views_view_models_models.html
+++ b/getting_started_views_view_models_models.html
@@ -17,7 +17,7 @@
     <script type="application/javascript" src="vendor/globalize/globalize.js"></script>
     <script type="application/javascript" src="vendor/globalize/globalize.culture.en-GB.js"></script>
     <script type="application/javascript" src="vendor/globalize/globalize.culture.fr-FR.js"></script>
-    <script type="application/javascript" src="vendor/js/knockback-full-stack-0.18.4.js"></script>
+    <script type="application/javascript" src="vendor/js/knockback-full-stack-0.18.5.js"></script>
     <script type="application/javascript" src="./vendor/bootstrap/js/bootstrap.min.js"></script>
     <script type="application/javascript" src="./vendor/google-code-prettify/prettify.js"></script>
     <script type="application/javascript" src="./js/stylecode.js"></script>
@@ -67,7 +67,7 @@
       <header class="page">
       </header>
       <content class="page">
-        <section><h1>Models, Views, and ViewModels: One-To-Many Relationships</h1>
+        <section><h1 id="models-views-and-viewmodels-one-to-many-relationships">Models, Views, and ViewModels: One-To-Many Relationships</h1>
 <p>The distinction between Models and ViewModels is important:</p>
 <p><em>Backbone.Models encapsulate the data and operations on the data, are serialized/deserialized from/to the server, and are in short Models.
 </em>ViewModels provide the attributes and logic to the templates often interacting with the Model data like Controllers. However, they may have their own data and logic that is purely View-related and that the server should never know about.</p>
