--- a/components_knockback_navigators.html
+++ b/components_knockback_navigators.html
@@ -62,14 +62,14 @@
     <div class="container">
       <header class="page">
       </header>
-      <content class="page"><h1>Compatible Components: Knockback-Navigators.js</h1>
+      <content class="page"><h1 id="compatible-components-knockback-navigators-js">Compatible Components: Knockback-Navigators.js</h1>
 <p>Knockback-Navigators.js provides page navigators, a pane navigator, and transition animations to help you make dynamic, single-page applications. They are platform-agnostic so you can even use them without using Knockback.js or Knockout.js!</p>
 <p><a href="http://kmalakoff.github.com/knockback-navigators/">Try the demo</a></p>
-<h2>kb.PageNavigatorPanes</h2>
+<h2 id="kb-pagenavigatorpanes">kb.PageNavigatorPanes</h2>
 <p>This component provides a page navigator with history and optional transition animations. If you are using Knockout.js or Knockback.js, you can observe changes to the active page (for example, to update menu links).</p>
-<h1>Usage</h1>
+<h1 id="usage">Usage</h1>
 <p>In order to filter loading of page URLs (eg. not reloading the active page if the URL hasn&#39;t changed) and to manage history (eg. going back if the previous page matches the URL), kb.PageNavigatorPanes provides a &#39;dispatcher(callback)&#39; that is only called when a cached page is not available.</p>
-<h3>Basic Usage (Static Pages)</h3>
+<h3 id="basic-usage-static-pages-">Basic Usage (Static Pages)</h3>
 <p>If you want to bind  to a static page, you should provide the &#39;{no_remove: true}&#39; option so if only hides, but does not detach elements when a page is deactivated.</p>
 <p>BackboneJS:</p>
 <pre><code>var page_navigator = new kb.PageNavigatorPanes($(&#39;#app&#39;)[0], {no_remove: true});
@@ -77,28 +77,28 @@ var router = new Backbone.Router()
 router.route(&#39;&#39;, null, page_navigator.dispatcher(function(){ page_navigator.loadPage($(&#39;#main&#39;)[0]); }));
 router.route(&#39;page1&#39;, null, page_navigator.dispatcher(function(){ page_navigator.loadPage($(&#39;#page1&#39;)[0]); }));
 router.route(&#39;page2&#39;, null, page_navigator.dispatcher(function(){ page_navigator.loadPage($(&#39;#page2&#39;)[0]); }));
-Backbone.history.start({hashChange: true});</code></pre>
-<p>PathJS:</p>
+Backbone.history.start({hashChange: true});
+</code></pre><p>PathJS:</p>
 <pre><code>var page_navigator = new kb.PageNavigatorPanes($(&#39;#app&#39;)[0], {no_remove: true});
 Path.map(&#39;&#39;).to(page_navigator.dispatcher(function(){ page_navigator.loadPage($(&#39;#main&#39;)[0]); }));
 Path.map(&#39;#page1&#39;).to(page_navigator.dispatcher(function(){ page_navigator.loadPage($(&#39;#page1&#39;)[0]); }));
 Path.map(&#39;#page2&#39;).to(page_navigator.dispatcher(function(){ page_navigator.loadPage($(&#39;#page2&#39;)[0]); }));
 Path.listen();
-Path.dispatch(window.location.hash);</code></pre>
-<h3>Dynamic Pages using Knockback.js</h3>
+Path.dispatch(window.location.hash);
+</code></pre><h3 id="dynamic-pages-using-knockback-js">Dynamic Pages using Knockback.js</h3>
 <p>You can dynamic pages either by hand or using Knockback.js&#39;s &#39;kb.renderTemplate(template_name, view_model, options)&#39; function.</p>
 <pre><code>...
 router.route(&#39;&#39;, null, page_navigator.dispatcher(function(){
   page_navigator.loadPage( kb.renderTemplate(&#39;page&#39;, new PageViewModel(pages.get(&#39;main&#39;))) );
 }));
-...</code></pre>
-<p>You can also force pages to unload when they are not active, but supplying a &#39;create&#39; function rather than an element.</p>
+...
+</code></pre><p>You can also force pages to unload when they are not active, but supplying a &#39;create&#39; function rather than an element.</p>
 <pre><code>...
 router.route(&#39;&#39;, null, page_navigator.dispatcher(function(){
   create: function() { return kb.renderTemplate(&#39;page&#39;, new PageViewModel(pages.get(&#39;page1&#39;))) }
 }));
-...</code></pre>
-<h1>Adding Transition Animations</h1>
+...
+</code></pre><h1 id="adding-transition-animations">Adding Transition Animations</h1>
 <p>You can provide transition animations either during routing (assymetic reverse transitions will not work if the page can be reloaded) or during button clicks.</p>
 <p>Transitions during routing:</p>
 <pre><code>...
@@ -108,8 +108,8 @@ router.route(&#39;&#39;, null, page_navigator.dispatcher(function(){
     transition: &#39;FadeIn&#39;
   });
 }));
-...</code></pre>
-<p>With options:</p>
+...
+</code></pre><p>With options:</p>
 <pre><code>...
 router.route(&#39;&#39;, null, page_navigator.dispatcher(function(){
   page_navigator.loadPage({
@@ -117,12 +117,12 @@ router.route(&#39;&#39;, null, page_navigator.dispatcher(function(){
     transition: {name: &#39;FadeIn&#39;, duration: 1000}
   });
 }));
-...</code></pre>
-<p>With buttons (HTML):</p>
-<pre><code>&lt;button class=&#39;btn btn-small&#39; onclick=&quot;kb.loadUrl(&#39;#page1&#39;, {name: &#39;NavigationSlide&#39;, inverse: true})&quot;&gt; Back&lt;/button&gt;</code></pre>
-<p>With buttons (Knockout):</p>
-<pre><code>&lt;button class=&#39;btn btn-small&#39; data-bind=&quot;click: function(){ kb.loadUrl(&#39;#page1&#39;, {name: &#39;NavigationSlide&#39;, inverse: true}) }&quot;&gt;&lt;span&gt; Back&lt;/span&gt;&lt;/button&gt;</code></pre>
-<h1>Embedding using Knockout.js bindings:</h1>
+...
+</code></pre><p>With buttons (HTML):</p>
+<pre><code>&lt;button class=&#39;btn btn-small&#39; onclick=&quot;kb.loadUrl(&#39;#page1&#39;, {name: &#39;NavigationSlide&#39;, inverse: true})&quot;&gt; Back&lt;/button&gt;
+</code></pre><p>With buttons (Knockout):</p>
+<pre><code>&lt;button class=&#39;btn btn-small&#39; data-bind=&quot;click: function(){ kb.loadUrl(&#39;#page1&#39;, {name: &#39;NavigationSlide&#39;, inverse: true}) }&quot;&gt;&lt;span&gt; Back&lt;/span&gt;&lt;/button&gt;
+</code></pre><h1 id="embedding-using-knockout-js-bindings-">Embedding using Knockout.js bindings:</h1>
 <p>If you are using KnockoutJS or Knockback.js, you can actually bind a page navigator in the HTML using &#39;ko.bindings&#39; and receive a callback to set up routing.</p>
 <pre><code>&lt;div data-bind=&quot;PageNavigatorPanes: {loaded: loaded}&quot;&gt;&lt;/div&gt;
 
@@ -134,14 +134,14 @@ ko.applyBindings({
     router.route(&#39;page2&#39;, null, page_navigator.dispatcher(function(){ page_navigator.loadPage($(&#39;#page2&#39;)[0]); }));
   }
 });
-Backbone.history.start({hashChange: true});</code></pre>
-<h2>kb.PageNavigatorSimple</h2>
+Backbone.history.start({hashChange: true});
+</code></pre><h2 id="kb-pagenavigatorsimple">kb.PageNavigatorSimple</h2>
 <p>This component provides a page navigator with no history and no transitions. In addition to adding a little structure to your application, if you are using Knockout.js or Knockback.js, you can observe changes to the active page (for example, to update menu links).</p>
-<h1>Usage</h1>
+<h1 id="usage">Usage</h1>
 <p>The usage is similar to kb.PageNavigatorSimple except you cannot supply transition animations and create functions (there is no history).</p>
-<h2>kb.PaneNavigator</h2>
+<h2 id="kb-panenavigator">kb.PaneNavigator</h2>
 <p>This component provides a way to embed moveable panes within you HTML (for example, sliding between items one at a time) with or without transition animations and provides the page transition functionality to kb.PageNavigatorPanes.</p>
-<h1>Usage</h1>
+<h1 id="usage">Usage</h1>
 <p>You can manually bind a pane-navigator:</p>
 <pre><code>&lt;div class=&#39;pane-navigator&#39;&gt;
   &lt;div class=&#39;pane cell&#39;&gt;
@@ -158,8 +158,8 @@ Backbone.history.start({hashChange: true});</code></pre>
 var pane_navigator_el = $(&#39;.pane-navigator&#39;)[0];
 var pane_navigator = new kb.PaneNavigator(pane_navigator_el, {no_remove: true, transition: &#39;NavigationSlide&#39;});
 kb.utils.wrappedPaneNavigator(pane_navigator_el, pane_navigator);
-pane_navigator.push(new kb.Pane(pane_navigator_el.children[0]));</code></pre>
-<h1>Optional Knockout.js bindings:</h1>
+pane_navigator.push(new kb.Pane(pane_navigator_el.children[0]));
+</code></pre><h1 id="optional-knockout-js-bindings-">Optional Knockout.js bindings:</h1>
 <pre><code>&lt;div class=&#39;pane-navigator&#39; data-bind=&quot;PaneNavigator: {transition: &#39;NavigationSlide&#39;}&quot;&gt;
   &lt;div class=&#39;pane cell&#39;&gt;
     &lt;p&gt;Pane1&lt;/p&gt;
@@ -172,28 +172,28 @@ pane_navigator.push(new kb.Pane(pane_navigator_el.children[0]));</code></pre>
   &lt;/div&gt;
 &lt;/div&gt;
 
-ko.applyBindings({});</code></pre>
-<h2>Transition Animations</h2>
+ko.applyBindings({});
+</code></pre><h2 id="transition-animations">Transition Animations</h2>
 <p>If you would like to have great transition animations between your panes or pages, you need to expose add them to the kb.transitions object.</p>
 <pre><code># info [Object] provides the following properties: container_el, to_el, from_el
 # options [Object] along with your custom options, it provides the following properties: forward
 kb.transitions[&#39;YourTransition&#39;] = function(info, options) {
-};</code></pre>
-<p>You can use kb.TransitionSavedState to store and restore element classes and css classes before and after your animation.</p>
+};
+</code></pre><p>You can use kb.TransitionSavedState to store and restore element classes and css classes before and after your animation.</p>
 <pre><code>// save to_el and container_el element classes and css &#39;min-height&#39; and &#39;overflow&#39; properties.
 state = new kb.TransitionSavedState(info, {to_el: [&#39;min-height&#39;], container_el: [&#39;overflow&#39;]});
 
 // DO STUFF: update the min-height, overflow, and any element classes
 
 // all saved state will be restored when fadeIn is done
-$(info.to_el).hide().fadeIn(500, state.callback);</code></pre>
-<p>If you have some production quality transitions that you&#39;d like to submit to the library, please <a href="http://kmalakoff.github.com/knockback/issues">let me know</a>.</p>
-<h2>Note on Lifecycle Management</h2>
-<h1>Auto-Releasing View Models</h1>
+$(info.to_el).hide().fadeIn(500, state.callback);
+</code></pre><p>If you have some production quality transitions that you&#39;d like to submit to the library, please <a href="http://kmalakoff.github.com/knockback/issues">let me know</a>.</p>
+<h2 id="note-on-lifecycle-management">Note on Lifecycle Management</h2>
+<h1 id="auto-releasing-view-models">Auto-Releasing View Models</h1>
 <p>Knockback-Navigators.js uses an implicit memory management model based on Knockback.js conventions (based on Knockout.js functionality). When an element is created, Knockback binds Knockout&#39;s dispose node callback:</p>
 <pre><code>// binds a callback to the node that releases the view model when the node is removed using ko.removeNode
-ko.utils.domNodeDisposal.addDisposeCallback(node, function() { kb.release(view_model)} );</code></pre>
-<p>There are three ways to do this in Knockback:</p>
+ko.utils.domNodeDisposal.addDisposeCallback(node, function() { kb.release(view_model)} );
+</code></pre><p>There are three ways to do this in Knockback:</p>
 <pre><code>// Auto-released Template
 var el = kb.renderTemplate(&#39;template_name&#39;, view_model, options);
 
@@ -201,8 +201,8 @@ var el = kb.renderTemplate(&#39;template_name&#39;, view_model, options);
 kb.applyBindings(view_model, el);
 
 // OR: Manually
-kb.releaseOnNodeRemove(view_model, el);</code></pre>
-<h1>Notifications</h1>
+kb.releaseOnNodeRemove(view_model, el);
+</code></pre><h1 id="notifications">Notifications</h1>
 <p>Knockback-Navigators.js provides hooks to receive notifications when an element is activated and deactivated so you can have fine-grained control (for example, to stop background page processing) when your element is detached ($(el).detach()) rather than removed (ko.removeNode(el)). It uses two conventions to provide the notifications:</p>
 <pre><code>// created manually or through page_navigator.loadPaga({el: el, view_model: view_model})
 var pane = kb.Pane({el: el, view_model: view_model});
@@ -213,14 +213,14 @@ pane.view_model.activate(el);
 var pane = kb.Pane({el: el});
 ...
 var view_model = ko.dataFor(pane.el); // get the ViewModel from the bound element
-view_model.activate(el);</code></pre>
-<h1>Not Using Knockback.js nor Knockout.js</h1>
+view_model.activate(el);
+</code></pre><h1 id="not-using-knockback-js-nor-knockout-js">Not Using Knockback.js nor Knockout.js</h1>
 <p>If you do not use Knockback.js or Knockout.js, you may want to provide custom memory management hooks instead of these defaults:</p>
 <pre><code>ko.dataFor = function(el) { return null; };
-ko.removeNode = function(el) { $(el).remove(); };</code></pre>
-<p>For example:</p>
-<pre><code>ko.dataFor = function(el) { return {activate: function(el) { /* do something with el */ }}; };</code></pre>
-
+ko.removeNode = function(el) { $(el).remove(); };
+</code></pre><p>For example:</p>
+<pre><code>ko.dataFor = function(el) { return {activate: function(el) { /* do something with el */ }}; };
+</code></pre>
       </content>
       <footer class="page">
       </footer>
