--- a/tutorial_locale_manager.html
+++ b/tutorial_locale_manager.html
@@ -17,7 +17,7 @@
     <script type="application/javascript" src="vendor/globalize/globalize.js"></script>
     <script type="application/javascript" src="vendor/globalize/globalize.culture.en-GB.js"></script>
     <script type="application/javascript" src="vendor/globalize/globalize.culture.fr-FR.js"></script>
-    <script type="application/javascript" src="vendor/js/knockback-full-stack-0.18.4.js"></script>
+    <script type="application/javascript" src="vendor/js/knockback-full-stack-0.18.5.js"></script>
     <script type="application/javascript" src="./vendor/bootstrap/js/bootstrap.min.js"></script>
     <script type="application/javascript" src="./vendor/google-code-prettify/prettify.js"></script>
     <script type="application/javascript" src="./js/stylecode.js"></script>
@@ -126,11 +126,11 @@ _.extend(LocaleManager.prototype, Backbone.Events);</pre>
             <pre data-for="js">this.current_locale = ko.observable(locale_identifier);</pre>
           </p>
           <p><span>We create a get() method that is used by ko.observable to listen for changes using Backbone.Events:</span>
-            <pre data-for="cs">get: (string_id) -&gt; ...</pre>
+            <pre data-for="cs">get: (string_id) -> ...</pre>
             <pre data-for="js">get: function(string_id) {...}</pre>
           </p>
           <p><span>We trigger a Backbone.Events event to notify a subscribed ko.observable</span>
-            <pre data-for="cs">setLocale: (locale_identifier) -&gt;
+            <pre data-for="cs">setLocale: (locale_identifier) ->
   @current_locale(locale_identifier)
   @trigger('change', @)</pre>
             <pre data-for="js">setLocale: function(locale_identifier) {
